tests/ui/explicit-tail-calls/ctfe-id-unlimited.return.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-id-unlimited.rs:28:20
   |
LL | const ID_ED: u32 = rec_id(ORIGINAL);
   |                    ^^^^^^^^^^^^^^^^ reached the configured maximum number of stack frames
   |
note: called from `rec_id`
  --> $DIR/ctfe-id-unlimited.rs:21:5
   |
LL |     inner(0, n)
   |     ^^^^^^^^^^^
note: [... 125 additional calls called from `inner` ...]
  --> $DIR/ctfe-id-unlimited.rs:17:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^
note: called from `inner`
  --> $DIR/ctfe-id-unlimited.rs:17:42
   |
LL |             #[cfg(r#return)] _ => return inner(acc + 1, n - 1),
   |                                          ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
